--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 2 phoenix browser"
+    ]
+  },
   "name": "portfolio",
   "homepage": "https://pledge-bank.com",
   "private": true,
