--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 2 safari version"
+      "last 2 safari version",
+      "last 2 Phoenix version"
     ]
   },
   "name": "portfolio",
